Fixed overflow of black backdrop on Edge and Safari, added landscape message

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,14 @@
   position: relative;
   border-radius: 25px;
 }
+.blue-dark,
+.blue-lighter,
+.pink,
+.purple,
+.purple-darker,
+.purple-darkest {
+  border-radius: 25px;
+}
 .blue-dark {
   background: rgba(0, 16, 36, 0.7); 
 }
@@ -40,12 +48,12 @@
 .black {
   background: rgba(0, 0, 0, 0.44);
 }
-.black-darker {
+/*.black-darker {
   background: rgba(0, 0, 0, 0.51);
 }
 .black-darkest {
   background: rgba(0, 0, 0, 0.6);
-}
+}*/
 /*.about, .membership,
 .social, .executives,
 .promo, .timetable-bg,
@@ -119,6 +127,18 @@
   vertical-align: middle;
 }
  h2, h3, h4, h5 {
+  @media (max-width: 800px) 
+and (orientation : landscape){
+  .landscape-message {
+    display: block;
+  }
+  #content-wrapper {
+    display: none;
+  }
+  .navbar-toggle {
+    display: none;
+  }
+}
     margin-top: 5px !important;
     margin-bottom: 5px !important;
 }
@@ -139,6 +159,42 @@
   bottom: 150px;
   left: 0%;
 }
+
+.landscape-message {
+  height: 100vh;
+  width: 100vw;
+  display: none;
+  font-family: 'Raleway', sans-serif;
+  color: white;
+  background: #3b3b3b;
+  z-index: 20;
+  position: fixed;
+}
+.landscape-message h1 {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 100%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+@media (max-width: 800px) 
+and (orientation : landscape){
+  .landscape-message {
+    display: block;
+  }
+  .navbar-header {
+    display: none;
+  }
+}
 /*------------------BANNER VIDEO------------------*/
 
 /*Add pattern overlay to video for better text readability and to hide video flaws*/
@@ -149,6 +205,7 @@
   background: rgba(17,51,90,.2);
   background-image: url(../img/pattern2.png);
   z-index: 5;
+  border-radius: 25px;
 }
 
 /* Pull video under overlay */
